# functional_judgement_EFA

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.py  pyproject.toml  requirements.txt
data/: instruments.csv
outputs/: instruments.json  persona_responses.json  personas.json  prompts.json
prompts/: system_prompt_template.jinja
scripts/: __init__.py  convert_instruments.py  convert_personas.py  format_outputs.py  generate_prompts.py  run_llm_simulation.py
tests/: __init__.py  conftest.py  test_config.py  test_convert_instruments.py  test_convert_personas.py  test_format_outputs.py  test_prompt_utils.py  test_run_llm_simulation.py  test_utils.py
utils/: __init__.py  file_io.py  llm_clients.py  logging_utils.py  prompt_utils.py
